# fleetchain

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  GAME_RULES.md  NETWORK_GUIDE.md
examples/: network_demo.sh  zk_proof_demo.rs
src/: api.rs  blockchain.rs  coordinator.rs  crypto.rs  game.rs  lib.rs  main.rs  network.rs
tests/: api_tests.rs  blockchain_tests.rs  coordinator_tests.rs  crypto_tests.rs  game_tests.rs  network_tests.rs
